--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -12,20 +12,18 @@ else
     <table class="table table-hover">
         <thead>
             <tr>
-                <th>
-                    Movie
-                </th>
+                <th>Movie</th>
+                <th>Genre</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                @foreach (var moive in Model)
+        <tbody>          
+                @foreach (var movie in Model)
                 {
-                    <td>
-                        @(moive.Name)
-                    </td>
-                }
-            </tr>
+                   <tr>
+                       <td>@Html.ActionLink(movie.Name, "Details" , new  { movie.Id })</td>
+                       <td>@movie.Genre.Name</td>
+                   </tr>
+                }        
         </tbody>
     </table>
 
