--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -4,29 +4,68 @@
 }
 <h2>Moives</h2>
 <br />
-@Html.ActionLink("New Movie","MovieForm", null , new { @class = "btn btn-primary"})
+@Html.ActionLink("New Movie", "MovieForm", null, new { @class = "btn btn-primary" })
 @if (!Model.Any())
 {
     <h2>No Moive now</h2>
 }
 else
 {
-    <table class="table table-bordered table-hover">
+   <div class="container">
+    <table id="movies" class="table  table-bordered " style="width: 100%; ">
         <thead>
             <tr>
-                <th>Movie</th>
+                <th>Movies</th>
                 <th>Genre</th>
+                <th>Delete</th>
             </tr>
         </thead>
-        <tbody>          
-                @foreach (var movie in Model)
-                {
-                   <tr>
-                       <td>@Html.ActionLink(movie.Name, "ViewEdit" , new  { movie.Id })</td>
-                       <td>@movie.Genre.Name</td>
-                   </tr>
-                }        
+        <tbody>
         </tbody>
     </table>
+</div>
 
+}
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            var table = $("#movies").DataTable({
+                ajax: {
+                    url: "/api/movie",
+                    dataSrc: ""
+                },
+                columns: [
+                    {
+                        data: "name",
+                        render: function (data, type, movie) {
+                            return "<a href='/movies/viewEdit/" + movie.id + "'>" + movie.name + "</a>";
+                        }
+                    },
+                    {
+                        data: "genre.name"
+                    },
+                    {
+                        data: "id",
+                        render: function (data) {
+                            return "<button class='btn-link js-delete' data-movie-id=" + data + ">Delete</button>";
+                        }
+                    }
+                ]
+            });
+
+            $("#movies").on("click", ".js-delete", function () {
+                var button = $(this);
+                if (confirm("Are you sure you want to delete this movie?")) {
+                    $.ajax({
+                        url: "/api/movie/" + button.attr("data-movie-id"),
+                        method: "DELETE",
+                        success: function () {
+                            table.row(button.parents("tr")).remove().draw();
+                        }
+                    });
+                }
+            });
+        });
+    </script>
 }
